<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/loginBackground"
    android:layoutDirection="rtl"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/registerimg"
            android:id="@+id/board"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nationalCodeLayout"
            android:textColorHint="@color/textColor"
            android:layout_margin="20dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:focusedByDefault="true"
                android:id="@+id/nationalCode"
                android:inputType="number"
                android:hint="@string/code"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textColor"
            android:id="@+id/passwordLayout"
            app:passwordToggleEnabled="true"
            android:layout_margin="20dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:textColor="@color/textColor"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textColor"
            android:id="@+id/confirmPasswordLayout"
            app:passwordToggleEnabled="true"
            android:layout_margin="20dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmPassword"
                android:inputType="textPassword"
                android:textColor="@color/textColor"
                android:hint="@string/confirmpassword"/>
        </android.support.design.widget.TextInputLayout>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radio_group"
            android:layout_gravity="right" android:layout_margin="20dp">
            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parent"
                android:id="@+id/parent"
                android:checked="true"
                android:layout_marginRight="20dp"/>
            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:layout_marginRight="10dp"
                android:id="@+id/teacher"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"

            android:orientation="vertical">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/register"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cancel"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/cancel"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>